[tool.poetry]
package-mode = false
packages = [{include = "app"}]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
numpy = "^1.26.4"
pillow = "^10.3.0"
opencv-python-headless = "^4.9.0.80"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
boto3 = "^1.34.108"
slowapi = "^0.1.9"
torch = {version = "^2.3.0+cpu", source = "pytorch"}
torchvision = {version = "^0.18.0+cpu", source = "pytorch"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
boto3-stubs = {extras = ["ec2"], version = "^1.34.108"}

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
